--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
     "@mdi/font": "^7.4.47",
+    "@vuepic/vue-datepicker": "^10.0.0",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "jquery": "^3.6.1",
@@ -24,8 +26,7 @@
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.3.2",
-    "vuetify": "^3.6.4",
-    "@vuepic/vue-datepicker": "^10.0.0"
+    "vuetify": "^3.6.4"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
