--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.3.2",
+    "vue3-quill": "^0.3.1",
     "vuetify": "^3.6.4"
   },
   "devDependencies": {
