--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,8 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "cssnano": "^7.0.1",
+    "eslint": "^9.24.0",
+    "eslint-plugin-vue": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "rollup-plugin-postcss": "^4.0.2",
