--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "fuse.js": "^7.1.0",
     "jquery": "^3.6.1",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
